--- a/.github/workflows/docker-image-centos-worker.yml
+++ b/.github/workflows/docker-image-centos-worker.yml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: ./worker
-          file: Dockerfile-centos
+          file: {context}/Dockerfile-centos
           push: true
           tags: spxcloudevops/ansible-playground-centos-worker
