--- a/worker/Dockerfile-ubuntu
+++ b/worker/Dockerfile-ubuntu
@@ -3,7 +3,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 ADD https://github.com/tsl0922/ttyd/releases/download/1.6.3/ttyd.x86_64 /usr/bin/ttyd
 RUN chmod +x /usr/bin/ttyd
 RUN apt-get update && \
-apt-get install -y python3 python3-pip nano vim openssh-server iputils-ping netcat dsnutils && \
+apt-get install -y python3 python3-pip nano vim openssh-server iputils-ping netcat dnsutils && \
 rm -rf /var/lib/apt/lists/*
 RUN pip3 install --no-cache-dir --upgrade pip
 RUN update-rc.d ssh defaults && service ssh start
