--- a/.github/workflows/docker-image-centos-worker.yml
+++ b/.github/workflows/docker-image-centos-worker.yml
@@ -3,8 +3,8 @@ name: Build and publish CentOS Worker
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      - 'worker/**'
 
 jobs:
   push_to_registry:
