--- a/worker/Dockerfile-centos
+++ b/worker/Dockerfile-centos
@@ -1,7 +1,22 @@
-FROM centos:7.9.2009
-ADD https://github.com/tsl0922/ttyd/releases/download/1.6.3/ttyd.x86_64 /usr/bin/ttyd
-RUN chmod +x /usr/bin/ttyd
+FROM centos:7.9.2009 AS ttyd-builder
+RUN yum install -y epel-release; \
+yum install -y openssl openssl-devel git json-c-devel libuv-devel cmake; \
+yum group install -y "Development tools"; \
+cd; \
+git clone https://libwebsockets.org/repo/libwebsockets; \
+cd libwebsockets && git checkout v4.3.0; \
+mkdir build && cd build; \
+cmake -D LWS_WITH_LIBUV=1 ..; \
+make && make install; \
+ldconfig; \
+cd; \
+git clone https://github.com/tsl0922/ttyd.git; \
+cd ttyd && git checkout 1.6.3; \
+mkdir build && cd build; \
+cmake ..; \
+make && make install
 
+FROM centos:7.9.2009
 RUN yum install -y openssh-server python3 vim nano bind-utils netcat; \
 rm -rf /etc/ssh/ssk*key; \
 ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''; \
@@ -10,7 +25,15 @@ ssh-keygen -t ed25519 -f /etc/ssh/ssh_host_ed25519_key -N ''
 RUN pip3 install --no-cache-dir --upgrade pip
 RUN echo 'root:ansible' | chpasswd; \
 echo 'PermitRootLogin=yes' >> /etc/ssh/sshd_config;
-EXPOSE 9090 22
+COPY --from=ttyd-builder /usr/local/bin/ttyd /usr/bin/ttyd
+RUN chmod +x /usr/bin/ttyd
+COPY --from=ttyd-builder /usr/local/lib /usr/local/lib
+RUN echo '/usr/local/lib' > /etc/ld.so.conf.d/local-lib.conf && ldconfig
+COPY --from=ttyd-builder /lib64/libuv.so.1.0.0 /lib64/libuv.so.1.0.0
+COPY --from=ttyd-builder /lib64/libuv.so.1 /lib64/libuv.so.1
+COPY --from=ttyd-builder /lib64/libuv.so /lib64/libuv.so
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
+EXPOSE 9090 22
+WORKDIR /root
 ENTRYPOINT ["/docker-entrypoint.sh"]
