--- a/worker/Dockerfile-ubuntu
+++ b/worker/Dockerfile-ubuntu
@@ -1,7 +1,16 @@
+FROM ubuntu:21.04 as ttyd-builder
+RUN apt-get update; \
+apt-get install -y  build-essential cmake git libjson-c-dev libwebsockets-dev; \
+git clone https://github.com/tsl0922/ttyd.git; \
+cd ttyd; \
+git checkout 1.6.3; \
+mkdir build; \
+cd build; \
+cmake ..; \
+make && make install
+
 FROM ubuntu:21.04
 ENV DEBIAN_FRONTEND=noninteractive
-ADD https://github.com/tsl0922/ttyd/releases/download/1.6.3/ttyd.x86_64 /usr/bin/ttyd
-RUN chmod +x /usr/bin/ttyd
 RUN apt-get update && \
 apt-get install -y python3 python3-pip nano vim openssh-server iputils-ping netcat dnsutils && \
 rm -rf /var/lib/apt/lists/*
@@ -13,7 +22,10 @@ rm -rf /etc/update-motd.d/*; \
 echo > /etc/motd; \
 mkdir -p /root/.cache && \
 touch /root/.cache/motd.legal-displayed
-EXPOSE 9090 22
+COPY --from=ttyd-builder /usr/local/bin/ttyd /usr/bin/ttyd
+RUN chmod +x /usr/bin/ttyd
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
+EXPOSE 9090 22
+WORKDIR /root
 ENTRYPOINT ["/docker-entrypoint.sh"]
